--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,6 +11,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:id="@+id/imageView"
+            app:cardCornerRadius="60dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             >
@@ -31,7 +33,7 @@
             android:layout_marginTop="20dp"
             android:layout_toRightOf="@+id/imageView"
             android:textSize="18dp"
-            android:text="Facebook bankcrupted"
+            android:text="Intellectual Chic"
             android:textColor="#000000"
             />
 
@@ -45,7 +47,7 @@
             android:layout_marginTop="6dp"
             android:layout_toRightOf="@+id/imageView"
             android:textSize="16dp"
-            android:text="Facebook bankcrupted this morning"
+            android:text="Những bộ cánh giúp bạn trông “tri thức” hơn"
             />
     </RelativeLayout>
 
